# toolbox

./: .bwconfig  .envrc  .gitignore  AGENTS.md  LICENSE  README.md  flake.nix
.github/workflows/: docs.yml
docs/: generate.py  pyproject.toml
docs/src/toolbox_docs/: __main__.py  models.py  renderer.py  scanner.py  sorting.py
docs/src/toolbox_docs/assets/: index.html.tmpl  style.css
docs/tests/: conftest.py  test_integration.py  test_renderer.py  test_scanner.py  test_sorting.py
issues/: tb-3yl.1.json  tb-3yl.2.json  tb-3yl.3.json  tb-3yl.4.json  tb-3yl.json  tb-h1i.1.json  tb-h1i.2.json  tb-h1i.3.json  tb-h1i.json  tb-ymq.1.json  tb-ymq.2.json  tb-ymq.3.json  tb-ymq.4.json  tb-ymq.5.json  tb-ymq.6.json  tb-ymq.7.json  tb-ymq.8.json  tb-ymq.9.json  tb-ymq.json
lib/: default.nix
