[project]
name = "toolbox-docs"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
toolbox-docs = "toolbox_docs.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toolbox_docs = ["assets/*.css", "assets/*.tmpl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
